# bgfx

./: CMakeLists.txt
cmake/: bgfxConfig.cmake.in
cmake/Hunter/: config.cmake
cmake/modules/: FindD3D12.cmake
examples/00-helloworld/: helloworld.cpp
include/bgfx/: defines.h
src/: bgfx.cpp  bgfx_p.h  glcontext_glx.cpp  renderer_gl.cpp  renderer_gl.h
